[package]
name = "iridium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
nom = "7.1.1"
clap = "3.1.18"
enum_primitive = "0.1.1"
num-traits = "0.2.15"
strum = { version = "0.24.0", features = ["derive"] }
